-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
3
-
9223372036854775807
This issue was created by maloo for Nathaniel Clark <nathaniel.l.clark@intel.com>
This issue relates to the following test suite run: https://testing.hpdd.intel.com/test_sets/d0b6dfde-3eaf-11e8-960d-52540065bddc
test_106 failed with the following error:
Timeout occurred after 276 mins, last suite running was conf-sanity, restarting cluster to continue tests
MDS error:
Apr 12 21:13:22 trevis-72vm6 kernel: Lustre: 24256:0:(llog_cat.c:926:llog_cat_process_or_fork()) lustre-OST0000-osc-MDT0000: catlog [0x2:0x1:0x0] crosses index zero Apr 12 21:13:29 trevis-72vm6 kernel: LustreError: 24256:0:(llog_cat.c:269:llog_cat_id2handle()) lustre-OST0000-osc-MDT0000: error opening log id [0xa:0x1:0x0]:0: rc = -2 Apr 12 21:13:29 trevis-72vm6 kernel: LustreError: 24256:0:(llog_cat.c:795:llog_cat_cancel_records()) lustre-OST0000-osc-MDT0000: fail to cancel 1 of 1 llog-records: rc = -2 Apr 12 21:13:29 trevis-72vm6 kernel: LustreError: 24256:0:(osp_sync.c:1062:osp_sync_process_committed()) lustre-OST0000-osc-MDT0000: can't cancel record: -2
VVVVVVV DO NOT REMOVE LINES BELOW, Added by Maloo for auto-association VVVVVVV
conf-sanity test_106 - Timeout occurred after 276 mins, last suite running was conf-sanity, restarting cluster to continue tests